Reformat and refactor